tests/transpiler/x/java/unary_neg.error
exit status 1
Main.java:4: error: bad operand types for binary operator '=='
        System.out.println((-3 == null ? "nil" : -3));
                               ^
  first type:  int
  second type: <null>
Main.java:5: error: bad operand types for binary operator '=='
        System.out.println((5 + (-2) == null ? "nil" : 5 + (-2)));
                                     ^
  first type:  int
  second type: <null>
2 errors
