tests/transpiler/x/java/unary_neg.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:27 UTC
public class Main {
    public static void main(String[] args) {
        System.out.println((-3 == null ? "nil" : -3));
        System.out.println((5 + (-2) == null ? "nil" : 5 + (-2)));
    }
}
